<resources>
    <string name="app_name">GastosPessoais</string>
    <string name="ok">OK</string>
    <string name="nao">Not</string>
    <string name="alterar_item">"Change "</string>
    <string name="aviso">Notice</string>
    <string name="cancelar">Cancel</string>
    <string name="categoria">Category</string>
    <string name="confirmacao">Confirmation</string>
    <string name="data">Date</string>
    <string name="descricao">Description</string>
    <string name="deseja_apagar">want to pay</string>
    <string name="disponivel">available</string>
    <string name="gastos">Spending</string>
    <string name="inserirGastos">Enter expense</string>
    <string name="inserirItens">Insert items</string>
    <string name="menu_alterar">Change</string>
    <string name="menu_excluir">delete</string>
    <string name="menu_gastos">Spending</string>
    <string name="menu_receitas">Revenue</string>
    <string name="novo_item">"New "</string>
    <string name="receita">Recipe</string>
    <string name="salvar">To save</string>
    <string name="semTipo">Without type</string>
    <string name="sim">Yes</string>
    <string name="valor">Value</string>
    <string name="menu_sobre">Informações</string>
</resources>
